[gd_scene load_steps=2 format=3 uid="uid://dkoeinycmcfg2"]

[ext_resource type="Script" path="res://pages/menu_principal/FichesCustom/ListeFiches.gd" id="1_6npwd"]

[node name="Fiches" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6npwd")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true

[node name="CenterContainer" type="MarginContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HSeparator2" type="HSeparator" parent="ScrollContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Bt_Retour" type="Button" parent="ScrollContainer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Retour"

[node name="Titre" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Fiches"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 25

[node name="Fiche+" type="HBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Button" type="Button" parent="ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer/Fiche+"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
disabled = true
text = "+"

[node name="Label" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer/Fiche+"]
layout_mode = 2
text = "Nouvelle Fiche"

[node name="VSeparator" type="VSeparator" parent="ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer/Fiche+"]
visible = false
layout_mode = 2

[node name="TrierPar" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer/Fiche+"]
visible = false
layout_mode = 2
text = "Trier par"

[node name="OptionButton" type="OptionButton" parent="ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer/Fiche+"]
visible = false
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "modification"
popup/item_0/id = 0
popup/item_1/text = "utilisation"
popup/item_1/id = 1

[node name="ScrollContainer" type="ScrollContainer" parent="ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ListeFiches" type="VBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 25

[connection signal="pressed" from="ScrollContainer/CenterContainer/VBoxContainer/HBoxContainer/Bt_Retour" to="." method="_on_bt_retour_pressed"]
